objects/Form_Container__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Column_Style__c</fullName>
        <label>Column Style</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>OneColumn</fullName>
                </value>
                <value>
                    <fullName>CustomLinks</fullName>
                </value>
                <value>
                    <fullName>TwoColumnsTopToBottom</fullName>
                </value>
                <value>
                    <fullName>TwoColumnsLeftToRight</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Container_Key__c</fullName>
        <formula>LOWER(Name)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Container Key</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Container_Sequence__c</fullName>
        <label>Container Sequence</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Decision_Expression__c</fullName>
        <label>Decision Expression</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Form_Container_External_Id__c</fullName>
        <externalId>true</externalId>
        <label>Form Container External Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Form_Definition_Version__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Form Definition Version</label>
        <referenceTo>Form_Definition_Version__c</referenceTo>
        <relationshipName>Form_Containers</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reference_Page_Layout__c</fullName>
        <formula>Form_Definition_Version__r.Form_Definition__r.Object_API_Name__c  &amp; &quot; - &quot; &amp;  Form_Definition_Version__r.Form_Definition__r.Reference_Page_Layout__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Reference Page Layout</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>EDF Form Container</label>
    <language>en_US</language>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Form_Definition_Version__c</columns>
        <columns>Active__c</columns>
        <columns>Title__c</columns>
        <columns>Container_Sequence__c</columns>
        <columns>Decision_Expression__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>FC-{0000}</displayFormat>
        <label>Form Container Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Form Containers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>